# simple-wordle-backend

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  env-sample  pyproject.toml  pytest.ini
src/: app.py  main.py  schemas.py
src/api/: __init__.py  conf.py  trial.py
src/core/: config.py  deps.py
src/data/: words.txt
tests/: conftest.py  test_simple_wordle_backend.py
