[tool.poetry]
name = "simple-wordle-backend"
version = "0.1.0"
description = ""
authors = ["Baptiste GAZE <bpt.gaze@gmail.com>"]
packages = [
    { include = 'src' }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
requests = "^2.27.1"
flake8 = "^4.0.1"
black = {version = "*", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'src.main:__main__'
